moved guilib/utils to presentation

--- a/Makefile.in
+++ b/Makefile.in
@@ -48,7 +48,6 @@ DIRECTORY_ARCHIVES=$(DVDPLAYER_ARCHIVES) \
                    xbmc/filesystem/VideoDatabaseDirectory/videodatabasedirectory.a \
                    xbmc/filesystem/filesystem.a \
                    xbmc/guilib/guilib.a \
-									 xbmc/guilib/utils/guilibUtils.a \
                    xbmc/input/input.a \
                    xbmc/interfaces/generic/interfaces-generic.a \
                    xbmc/interfaces/info/info.a \
@@ -75,6 +74,7 @@ DIRECTORY_ARCHIVES=$(DVDPLAYER_ARCHIVES) \
                    xbmc/pictures/pictures.a \
                    xbmc/playlists/playlists.a \
                    xbmc/powermanagement/powermanagement.a \
+									 xbmc/presentation/presentation.a \
                    xbmc/profiles/profiles.a \
                    xbmc/profiles/dialogs/profiles_dialogs.a \
                    xbmc/profiles/windows/profiles_windows.a \
@@ -281,7 +281,6 @@ GTEST_LIBS = $(GTEST_DIR)/lib/.libs/libgtest.a
 CHECK_DIRS = xbmc/addons/test \
 						 xbmc/dbwrappers/test \
              xbmc/filesystem/test \
-						 xbmc/guilib/utils/test \
              xbmc/music/tags/test \
              xbmc/network/test \
 						 xbmc/nls/test \
@@ -291,13 +290,13 @@ CHECK_DIRS = xbmc/addons/test \
              xbmc/interfaces/python/test \
              xbmc/cores/AudioEngine/Sinks/test \
              xbmc/jobs/test \
+						 xbmc/presentation/test \
 						 xbmc/scraper/test \
              xbmc/sysinfo/test \
              xbmc/test
 CHECK_LIBS = xbmc/addons/test/addonsTest.a \
 						 xbmc/dbwrappers/test/dbwrappersTest.a \
              xbmc/filesystem/test/filesystemTest.a \
-						 xbmc/guilib/utils/test/guilibUtilsTest.a \
              xbmc/music/tags/test/tagsTest.a \
              xbmc/network/test/networkTest.a \
 						 xbmc/nls/test/nlsTest.a \
@@ -307,6 +306,7 @@ CHECK_LIBS = xbmc/addons/test/addonsTest.a \
              xbmc/interfaces/python/test/pythonSwigTest.a \
              xbmc/cores/AudioEngine/Sinks/test/AESinkTest.a \
              xbmc/jobs/test/jobsTest.a \
+						 xbmc/presentation/test/presentationTest.a \
 						 xbmc/scraper/test/scraperTest.a \
              xbmc/sysinfo/test/sysinfoTest.a \
              xbmc/test/xbmc-test.a
