--- a/xbmc/presentation/Makefile.in
+++ b/xbmc/presentation/Makefile.in
@@ -2,7 +2,7 @@ SRCS += GroupUtils.cpp
 SRCS += LabelFormatter.cpp
 SRCS += SortUtils.cpp
 
-LIB   = guilibUtils.a
+LIB   = presentation.a
 
 include @abs_top_srcdir@/Makefile.include
 -include $(patsubst %.cpp,%.P,$(patsubst %.c,%.P,$(patsubst %.S,,$(SRCS))))
